# video-translator

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.beads/: metadata.json
backend/: config.py  database.py  main.py  models.py
backend/adapters/: transcription.py  translation.py  tts.py
backend/api/: jobs.py  lectures.py  segments.py
backend/services/: media.py  pipeline.py  storage.py
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: SegmentEditor.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  progress.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: LectureDetail.tsx  LectureList.tsx
