[project]
name = "video-translator"
version = "0.1.0"
description = "Video translation POC backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "aiofiles",
    "python-multipart",
    "httpx",
    "pydantic-settings",
    "openai>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
